--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "react-meme",
-  "version": "0.1.0",
-  "private": true,
+  "name": "react-tx-loader",
+  "version": "0.1.1",
   "dependencies": {
     "bourbon": "^5.0.0",
     "material-ui": "^0.20.0",
